src/objects/Invoice_Callout_Configuration__mdt.object
<CustomObject>
    <description>Configuration related to sending invoice/debit memo.</description>
    <fields>
        <fullName>Adhoc_Device_Account_Types__c</fullName>
        <description>Account record type names for which adhoc device logic is ran.</description>
        <label>Adhoc Device Account Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sending invoice/debit memo is active when checked.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Email_Account_Types__c</fullName>
        <description>Account record type names for which welcome email logic is ran.</description>
        <label>Welcome Email Account Types</label>
        <type>TextArea</type>
    </fields>
    <label>Invoice Callout Configuration</label>
    <pluralLabel>Invoice Callout Configuration</pluralLabel>
</CustomObject>